; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/ps3/extr_repository.c_make_field.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/ps3/extr_repository.c_make_field.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64)* @make_field to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @make_field(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %6 = bitcast i64* %5 to i8*
  %7 = load i8*, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @strnlen(i8* %8, i32 8)
  %10 = call i32 @memcpy(i8* %6, i8* %7, i32 %9)
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = add nsw i64 %11, %12
  ret i64 %13
}

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @strnlen(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
